simple liquid fire template with transition from index to about and vice-versa

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,23 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
 
-{{outlet}}
+
+<div class="container">
+	<div class="col-sm-8 col-md-10 col-lg-10">
+		<button class="btn btn-info">scrk</button>
+
+		<br>
+		<br>
+
+
+		{{liquid-outlet}}	
+	</div>
+
+</div>
+
+
+
+
+<div class="col-md-2 col-lg-2">
+
+</div>
+
+
